--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -29,10 +29,11 @@
             android:gravity="right"
             app:collapsedTitleGravity="center"
             app:contentScrim="@android:color/transparent"
-            app:expandedTitleGravity="right|bottom"
+            app:expandedTitleGravity="right"
             app:expandedTitleMargin="16dp"
             app:expandedTitleMarginBottom="16dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:title="title">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/my_toolbar"
@@ -45,11 +46,11 @@
                 android:paddingStart="16dp"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:titleTextColor="@android:color/white" />
+                app:titleTextColor="@android:color/white"/>
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax">
 
@@ -57,22 +58,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/workplace_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:layout_margin="16dp"
-                        android:drawableRight="@drawable/ic_white_arrow_down_24"
-                        android:drawablePadding="4dp"
-                        android:padding="16dp"
-                        android:paddingLeft="16dp"
-                        android:textColor="@android:color/white"
-                        android:textSize="26sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        tools:text="ABCS" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/workplace_title"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_gravity="bottom"-->
+<!--                        android:layout_margin="16dp"-->
+<!--                        android:drawableRight="@drawable/ic_white_arrow_down_24"-->
+<!--                        android:drawablePadding="4dp"-->
+<!--                        android:padding="16dp"-->
+<!--                        android:paddingLeft="16dp"-->
+<!--                        android:textColor="@android:color/white"-->
+<!--                        android:textSize="26sp"-->
+<!--                        android:textStyle="bold"-->
+<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                        app:layout_constraintRight_toRightOf="parent"-->
+<!--                        tools:text="ABCS" />-->
 
                     <ImageView
                         android:id="@+id/more_workplace_opt"
@@ -82,9 +83,9 @@
                         android:background="@drawable/faded_circle"
                         android:padding="8dp"
                         android:src="@drawable/ic_baseline_more_horiz_24"
-                        app:layout_constraintBottom_toBottomOf="@id/workplace_title"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/workplace_title" />
+                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </FrameLayout>
