--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -26,8 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="176dp"
             android:fitsSystemWindows="true"
-            android:gravity="right"
-            app:collapsedTitleGravity="center"
+            android:gravity="right|bottom"
+            app:collapsedTitleGravity="center|bottom"
             app:contentScrim="@android:color/transparent"
             app:expandedTitleGravity="right"
             app:expandedTitleMargin="16dp"
@@ -40,6 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:layout_gravity="right"
+                android:layout_marginBottom="16dp"
                 android:background="@android:color/transparent"
                 android:elevation="0dp"
                 android:gravity="right"
@@ -58,22 +59,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-<!--                    <TextView-->
-<!--                        android:id="@+id/workplace_title"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_gravity="bottom"-->
-<!--                        android:layout_margin="16dp"-->
-<!--                        android:drawableRight="@drawable/ic_white_arrow_down_24"-->
-<!--                        android:drawablePadding="4dp"-->
-<!--                        android:padding="16dp"-->
-<!--                        android:paddingLeft="16dp"-->
-<!--                        android:textColor="@android:color/white"-->
-<!--                        android:textSize="26sp"-->
-<!--                        android:textStyle="bold"-->
-<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                        app:layout_constraintRight_toRightOf="parent"-->
-<!--                        tools:text="ABCS" />-->
+                    <!--                    <TextView-->
+                    <!--                        android:id="@+id/workplace_title"-->
+                    <!--                        android:layout_width="wrap_content"-->
+                    <!--                        android:layout_height="wrap_content"-->
+                    <!--                        android:layout_gravity="bottom"-->
+                    <!--                        android:layout_margin="16dp"-->
+                    <!--                        android:drawableRight="@drawable/ic_white_arrow_down_24"-->
+                    <!--                        android:drawablePadding="4dp"-->
+                    <!--                        android:padding="16dp"-->
+                    <!--                        android:paddingLeft="16dp"-->
+                    <!--                        android:textColor="@android:color/white"-->
+                    <!--                        android:textSize="26sp"-->
+                    <!--                        android:textStyle="bold"-->
+                    <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+                    <!--                        app:layout_constraintRight_toRightOf="parent"-->
+                    <!--                        tools:text="ABCS" />-->
 
                     <ImageView
                         android:id="@+id/more_workplace_opt"
@@ -84,8 +85,9 @@
                         android:padding="8dp"
                         android:src="@drawable/ic_baseline_more_horiz_24"
                         app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </FrameLayout>
